[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/AbstractItem.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 5.38516

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 2 ),
"transitions": PoolRealArray( -2, -2, -0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -7 ), Vector2( 0, 0 ) ]
}

[node name="AbstractItem" type="Area2D"]
collision_mask = 2
script = ExtResource( 1 )

[node name="PickCollision" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Icon" type="Sprite" parent="."]
scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_group_": true
}

[node name="PickTimer" type="Timer" parent="."]
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="."]
autoplay = "Start"
anims/RESET = SubResource( 2 )
anims/Start = SubResource( 3 )

[connection signal="timeout" from="PickTimer" to="." method="_on_PickTimer_timeout"]
